# e-commerce-mlops

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  Welcome.md  commitlint.config.js  dev.env  docker-compose.yaml  e-commerce-mlops.code-workspace  mypy.ini  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  ruff.toml  staging.env  template.env  workspaces.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  onCreateCommand.sh  openWorkspace.sh
.devcontainer/resources/: .p10k.zsh  .zshrc  direnv.toml
.github/workflows/: backend_lint_tests.yaml  cache_poetry_packages.yaml  commit_lint.yaml  datascience_lint.yaml  deploy-docs.yml  fix-backend-test.yaml  linter-and-tests.yaml
airflow/dags/: dag_dataset.py
backend/: .pre-commit-config.yaml  backend.Dockerfile  backend.dockerfile  prestart.sh  pylintrc  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  start-reload.sh
backend/.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
backend/.hooks/: pre-commit.json
backend/alembic/: env.py
backend/alembic/versions/: c165e99b1e6b_initial_creation_with_user_table.py  cd6f68a67493_add_prediction_feedback.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: login.py  prediction.py  prediction_feedback.py  public.py  users.py
backend/app/core/: image_data_utils.py  metadata.py  security.py  settings.py
backend/app/crud/: __init__.py  base.py  crud_prediction_feedback.py  crud_user.py
backend/app/database/: base.py  base_class.py  init_db.py  session.py
backend/app/ml_model/: ml_model.py  ml_utilities.py
backend/app/models/: __init__.py  prediction_feedback.py  user.py
backend/app/schemas/: __init__.py  prediction_feedback.py  prediction_result.py  predictionresult.py  product.py  token.py  user.py
backend/app/scripts/: backend_pre_start.py
backend/app/tests/: __init__.py  conftest.py
backend/app/tests/api/endpoints/: test_login.py  test_prediction.py  test_prediction_feedback.py  test_public.py  test_users.py
backend/app/tests/api/v1/endpoints/: test_login.py  test_prediction.py  test_prediction_feedback.py  test_public.py  test_users.py
backend/app/tests/utilities/: prediction_feedback.py  user.py  utilities.py
backend/datascience/: __init__.py  classification.py
backend/datascience/scripts/: text_model.py  train_text_model.py
backend/datascience/src/: analysis.py  data.py  text_model.py  text_preproc_pipeline.py  transformer.py  vectorization_pipeline.py
backend/model/: README.md
backend/scripts/: backend_pre_start.py  code_checking.py  download_models.py  lint.sh  prestart.sh  seed_data.py  start-reload.sh  start-tests.sh  start-with-telemetry.sh  start.sh
dashboard/: app.vue  auth.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
dashboard/app/: auth.ts  layout.tsx  page.tsx
dashboard/app/login/: page.tsx
dashboard/app/ui/: footer.tsx  navbar.tsx
dashboard/components/: ProductForm.vue
datascience/: .env  __init__.py  datascience.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
datascience/scripts/: code_checking.py  create_dataset.py  create_datasets.py  download_mlruns.py  generate_datasets.py  optimize_images.py  rename-artifacts.sh  start.sh  train_fusion_model.py  train_image_model.py  train_text_model.py
datascience/src/: __init__.py  vectorization_pipeline.py
datascience/src/core/: constants.py  custom_errors.py  logging_config.py  logging_filters.py  settings.py
datascience/src/transformers/: text_transformer.py
datascience/src/utilities/: dataset_utils.py  mlflow_utils.py  model_eval.py  model_utils.py
docs/: package-lock.json  package.json  quartz.config.ts  quartz.layout.ts
docs/content/: index.md
docs/content/.obsidian/: app.json  appearance.json  core-plugins-migration.json  core-plugins.json  page-preview.json  templates.json  types.json  workspace.json  workspaces.json
docs/content/Developer/: Documentation.md
docs/content/Templates/: Page.md
docs/quartz/components/: Footer.tsx
scripts/: demo.env  docker-deploy.sh  docker-setup.sh  environment-setup.sh  install-signoz.sh  run-tests-in-containers.sh  run-tests.sh  test.sh
scripts/ressources/: signoz-docker-compose.yml
scripts/tests/: start-containers.sh  stop-containers.sh
scripts/utilities/: check_tensorflow_GPU_support.py
