#:schema https://json.schemastore.org/pyproject.json

[tool.poetry]
name = "root"
version = "0.1.0"
description = "Root project to handle pre-commits."
authors = ["Joffrey Lagut <j.lagut@live.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/JoffreyLGT/e-commerce-mlops"
documentation = "https://github.com/JoffreyLGT/e-commerce-mlops#readme"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JoffreyLGT/e-commerce-mlops/issues"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
